# FAR_AWAY

./: .gitignore  BEST_PROBLEM_STATEMENT_FINDINGS.md  FABLE_BUILD_INSTRUCTIONS.txt  Gemini_api_reaearch.txt  IMPLEMENTATION_PLAN.md  LINKEDIN_POST.md  agentic_gaps_report.md  build_brief.py  build_deepdive.py  build_plan_pdf.py  context.txt  examinations_gaps_report.md  logistics_transit_gaps.md  package-lock.json  package.json  railway_gaps_research.md
orbitguard/: .env.example  .gitignore  README.md  pyproject.toml
orbitguard/.github/workflows/: ci.yml
orbitguard/data/: scorecard.json  scorecard_autopsy.json
orbitguard/data/fixtures/: gp_active_subset.json
orbitguard/docs/: ALGORITHMS.md  DEMO_SCRIPT.md  DEMO_SCRIPT_4MIN.md  VALIDATION.md  build_report.py
orbitguard/engine/: __init__.py  cli.py  config.py
orbitguard/engine/api/: app.py  schemas.py
orbitguard/engine/astro/: elements.py  frames.py  propagate.py
orbitguard/engine/explain/: groq_client.py  prompts.py  templates.py  validator.py
orbitguard/engine/ingest/: celestrak.py  satcat.py
orbitguard/engine/risk/: encounter.py  evidence.py  pc_chan.py  pc_foster.py  pc_max.py  policy.py  simulate.py
orbitguard/engine/screening/: filters.py  pipeline.py  sieve.py  tca.py
orbitguard/engine/validation/: allvsall.py  answer_key.py  interpolate.py  matching.py  (+3 more)
orbitguard/tests/: conftest.py  test_astro.py  test_pc.py  test_policy.py  test_satcat.py  test_sieve_property.py  test_tracss_harness.py  test_validation.py
orbitguard/web/: next.config.js  package-lock.json  package.json  vercel.json
(+17 files in other folders)
