[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orbitguard"
version = "0.1.0"
description = "Free, explainable, validated satellite conjunction screening for small operators"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "sgp4>=2.23",
    "skyfield>=1.49",
    "httpx>=0.27",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "ruff"]
validation = ["pyarrow>=16.0", "pandas>=2.2"]

[project.scripts]
orbitguard = "engine.cli:main"

[tool.setuptools.packages.find]
include = ["engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
